# codex

codex-rs/apply-patch/tests/fixtures/scenarios/024_multiple_context_lines/: patch.txt
codex-rs/apply-patch/tests/fixtures/scenarios/024_multiple_context_lines/expected/: first.py  second.py
codex-rs/apply-patch/tests/fixtures/scenarios/024_multiple_context_lines/input/: first.py  second.py
codex-rs/apply-patch/tests/fixtures/scenarios/025_multiple_context_lines_subset/: patch.txt
codex-rs/apply-patch/tests/fixtures/scenarios/025_multiple_context_lines_subset/expected/: foo.txt
codex-rs/apply-patch/tests/fixtures/scenarios/025_multiple_context_lines_subset/input/: foo.txt
codex-rs/apply-patch/tests/fixtures/scenarios/026_multiple_context_lines_overlap/: patch.txt
codex-rs/apply-patch/tests/fixtures/scenarios/026_multiple_context_lines_overlap/expected/: foo.txt
codex-rs/apply-patch/tests/fixtures/scenarios/026_multiple_context_lines_overlap/input/: foo.txt
codex-rs/apply-patch/tests/fixtures/scenarios/027_multiple_context_lines_partial_success/: patch.txt
codex-rs/apply-patch/tests/fixtures/scenarios/028_multiple_context_lines_skipped/: patch.txt
codex-rs/core/src/: codex.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/tasks/: regular.rs
codex-rs/file-search/: Cargo.toml
codex-rs/file-search/src/: lib.rs
codex-rs/file-search/tests/: search_manager.rs
codex-rs/otel/src/: lib.rs
codex-rs/otel/src/traces/: otel_manager.rs
codex-rs/tui/src/: app.rs  file_search.rs
(+3 files in other folders)
